wcfsetup/install/files/style/message.less
/* ... */
.dislikeButton.active {
	.icon {
		color: rgba(204, 0, 0, 1);
	}
}

@media screen and (max-width: 800px), print {
	.message.messageSidebarOrientationLeft,
	.message.messageSidebarOrientationRight {
		.messageContent {
			border: 0;
			margin: 0;
		}
		
		.messageSidebar {
			float: none;
			min-height: 37px;
		}
		
		.messageHeader {
			&::before,
			&::after {
				display: none;
			}
		}
	}
	
	.message .messageHeader .messageQuickOptions,
	.message .messageBody .messageSignature,
	.message .messageSidebar .userCredits {
		display: none;
	}	
	
	.message .messageSidebar {
		padding: 7px;
		text-align: left;
		width: auto;
		
		> div {
			margin-left: 40px;
		}
		
		.userAvatar {
			left: 7px;
			position: absolute;
			top: 0;
			
			img {
				height: 32px !important;
				width: 32px !important;
			}
			
			> .badgeOnline {
				display: none;
			}
		}
		
		.userTitle {
			margin-top: -2px;
		}
	}
	
	/* reduce paddings */
	.message .messageContent .messageHeader {
		padding: 7px 7px 0;
	}
	
	.message .messageBody {
		padding: 7px;
	}
	
	.message .messageBody > div:not(.messageFooter) {
		padding: 7px 0;
	}
	
	.message .messageBody > footer {
		padding: 0;
		position: absolute;
		right: 7px;
		top: 7px;
	}
	
	.message .messageOptions nav {
		opacity: 1;
		position: static;
		text-align: left;
	}
	
	.message .newMessageBadge {
		display: none;
	}
}

@media screen and (min-width: 641px) and (max-width: 800px), print {
	.message .messageSidebar,
	.message .messageContent .messageHeader,
	.message .messageBody {
		padding-left: @wcfGapMedium;
		padding-right: @wcfGapMedium;
	}
	
	.message .messageSidebar {
		.userAvatar {
			left: @wcfGapMedium;
		}
	}
	
	.message .messageBody > footer {
		right: @wcfGapMedium;
	}
}

@media only screen and (max-width: 800px) {
	.moderationList {
		thead {
			display: none;
		}
		
		tbody {
			.columnAssignedUserID,
			.columnLastChangeTime {
				display: none;
			}
		}
	}
}

